[package]
name = "tempdb_cockroach"
description = "Temporary databases for unit testing"
keywords = ["temporary", "database", "test", "library", "cockroach", "cockroachdb", "postgres", "postgresql", "sql"]
version = "0.1.0"
edition = "2018"
documentation = "https://docs.rs/tempdb_cockroach"
repository = "https://github.com/calder/rust-tempdb"
readme = "README.md"
license = "MIT"
authors = ["Calder Coalson <caldercoalson@gmail.com>"]

exclude = [
  "/.travis.yml",
  "/scripts",
]

[dependencies]
postgres = ""
tempfile = ""
