[package]
name = "tempdb_cockroach"
version = "1.0.9"
edition = "2018"
description = "Temporary databases for unit testing"
keywords = ["cockroach", "cockroachdb", "temporary", "database", "test"]
documentation = "https://docs.rs/tempdb_cockroach"
repository = "https://github.com/calder/rust-tempdb"
readme = "README.md"
license = "MIT"
authors = ["Calder Coalson <caldercoalson@gmail.com>"]

exclude = [
  "/.travis.yml",
  "/doc/**",
  "/scripts/**",
]

[dependencies]
postgres = "0.15"
tempfile = "3"
